NetBSD Problem Report #42486

From www@NetBSD.org  Mon Dec 21 04:24:17 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 5A98363C501
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 21 Dec 2009 04:24:17 +0000 (UTC)
Message-Id: <20091221042416.C796E63C4ED@www.NetBSD.org>
Date: Mon, 21 Dec 2009 04:24:16 +0000 (UTC)
From: eravin@panix.com
Reply-To: eravin@panix.com
To: gnats-bugs@NetBSD.org
Subject: nfsd sometimes exits prematurely during port-scan - see freebsd bin/61084
X-Send-Pr-Version: www-1.0

>Number:         42486
>Category:       bin
>Synopsis:       nfsd sometimes exits prematurely during port-scan - see freebsd bin/61084
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Dec 21 04:25:01 +0000 2009
>Closed-Date:    Fri Jan 07 08:17:33 +0000 2011
>Last-Modified:  Tue Mar 22 08:05:01 +0000 2011
>Originator:     Ed Ravin
>Release:        5.0
>Organization:
PANIX Public Access Networks Corp
>Environment:
NetBSD util2.nyc.access.net 5.0 NetBSD 5.0 (PANIX-XEN3U-APPLIANCE) #1: Sun May  3 20:27:43 EDT 2009  root@juggler.panix.com:/misc3/obj/misc2/devel/netbsd/5.0/src/sys/arch/i386/compile/PANIX-XEN3U-APPLIANCE i386
>Description:
as described in freebsd bug bin/61084, the NetBSD nfsd may exit in response to a portscan, with the message:

   nfsd[318]: accept failed: Software caused connection abort


>How-To-Repeat:

>Fix:
a patch is provided in the FreeBSD bug referenced above, but I have not evaluated it, and it doesn't look like the FreeBSD people have either.

>Release-Note:

>Audit-Trail:
From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42486 CVS commit: src/usr.sbin/nfsd
Date: Mon, 21 Dec 2009 00:06:55 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Mon Dec 21 05:06:55 UTC 2009

 Modified Files:
 	src/usr.sbin/nfsd: nfsd.c

 Log Message:
 PR/42486: Ed Ravin nfsd sometimes exits prematurely during port-scan fix
 from freebsd bin 61084 applied (preserving errno properly). The accept
 code should be merged.


 To generate a diff of this commit:
 cvs rdiff -u -r1.56 -r1.57 src/usr.sbin/nfsd/nfsd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Mon, 21 Dec 2009 09:14:38 +0000
State-Changed-Why:
christos committed a fix to -current -- does this solve the problem for you?


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42486 CVS commit: [netbsd-5] src/usr.sbin/nfsd
Date: Fri, 7 Jan 2011 06:27:52 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Fri Jan  7 06:27:51 UTC 2011

 Modified Files:
 	src/usr.sbin/nfsd [netbsd-5]: nfsd.c

 Log Message:
 Pull up following revision(s) (requested by bouyer in ticket #1515):
 	usr.sbin/nfsd/nfsd.c: revision 1.57
 PR/42486: Ed Ravin nfsd sometimes exits prematurely during port-scan fix
 from freebsd bin 61084 applied (preserving errno properly). The accept
 code should be merged.


 To generate a diff of this commit:
 cvs rdiff -u -r1.54 -r1.54.4.1 src/usr.sbin/nfsd/nfsd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Fri, 07 Jan 2011 08:17:33 +0000
State-Changed-Why:
one-year feedback timeout and the fix has been pulled up to netbsd-5


From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42486 CVS commit: [netbsd-4] src/usr.sbin/nfsd
Date: Tue, 22 Mar 2011 08:01:39 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Tue Mar 22 08:01:38 UTC 2011

 Modified Files:
 	src/usr.sbin/nfsd [netbsd-4]: nfsd.c

 Log Message:
 Pull up following revision(s) (requested by bouyer in ticket #1414):
 	usr.sbin/nfsd/nfsd.c: revision 1.57 via patch
 PR/42486: Ed Ravin nfsd sometimes exits prematurely during port-scan fix
 from freebsd bin 61084 applied (preserving errno properly). The accept
 code should be merged.


 To generate a diff of this commit:
 cvs rdiff -u -r1.49 -r1.49.2.1 src/usr.sbin/nfsd/nfsd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.