PR/42486: Ed Ravin nfsd sometimes exits prematurely during port-scan fix from freebsd bin 61084 applied (preserving errno properly). The accept code should be merged.